# rag-base

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/core/: database.py  exception.py  security.py  util.py
app/model/: models.py
app/rag/: ingest.py  retrieval.py
app/rag/retrieval_graph/: __init__.py  configuration.py  graph.py  state.py
app/rag/retrieval_graph/researcher_graph/: graph.py  state.py
app/repository/: base_user_repository.py
app/repository/db/: db_user_repository.py
app/routes/: user_router.py
app/schema/: common_schema.py  user_schema.py
app/service/: user_service.py
backend/: configuration.py  ingest.py  retrieval.py
backend/retrieval_graph/: configuration.py  graph.py
backend/retrieval_graph/propmts/: prompt_text.py
backend/retrieval_graph/researcher_graph/: graph.py
frontend/: basic.py  chat_with_documents.py
test/: retrieval_graph_test.py
tests/: graph_test.py  langfuse_test.py  test.ipynb
